# ErrorStateKalmanFilter

./: README.MD  eskf-quaternion-prototyping.py  prediction-update-step.py  propogating-nominal-error.py
Test_and_Notes/Draft_Implementation/: main.py
Test_and_Notes/Draft_Implementation/filter/: __init__.py
Test_and_Notes/orientation_tests/: orientation_log.csv
Test_and_Notes/tmp/mk1/: prediction-update-step.txt
Test_and_Notes/tmp/mk2/: filter.txt  live.txt
Tests_Notes_Garbage/tmp/mk1/: propogating-nominal-error.txt
cpp-work-in-progress/src/filter/: filter.cpp
cpp-work-in-progress/src/utils/: motion_data.cpp  sensor_data.cpp
cpp/include/eskf/data/: data.h
cpp/src/: main.cpp
cpp/src/data/: data.cpp  motion_data.csv
cpp/src/filter/: filter.cpp  sensor_data.csv
cpp/src/utils/: RunFilter.cpp  motion_data.cpp  sensor_data.cpp
mk2/: filter.py  live-filter.py  propagation.py
results/: animation.ipynb  code.txt
src/: CMakeLists.txt  main.cpp
src/Draft_Implementation/: main.py
src/Draft_Implementation/filter/: filter.py
src/Draft_Implementation/utils/: RunFilter.py  __init__.py
src/Final_Implementation/: main.cpp
src/Final_Implementation/data/: data.cpp
src/Final_Implementation/filter/: filter.cpp
src/Final_Implementation/include/eskf/filter/: filter.h
src/Final_Implementation/include/eskf/utils/: sensor_data.h
src/Final_Implementation/utils/: RunFilter.cpp
src/filter/: filter.cpp  filter.py
src/include/eskf/utils/: RunFilter.h
src/utils/: RunFilter.cpp  motion_data.cpp  sensor_data.cpp
tests/: kalman-prototyping.py
(+4 files in other folders)
